<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_squash">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <TextView
            android:id="@+id/textView_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/cabin_medium"
            android:text="@string/home_header"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_visitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/cabin_medium"
            android:text="@string/visitor_header"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_score_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/cabin_medium"
            android:text="@string/_0"
            android:textSize="100sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_home" />

        <TextView
            android:id="@+id/textView_score_visitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/cabin_medium"
            android:text="@string/_0"
            android:textSize="100sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView_visitor" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/button_score_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button"
            android:fontFamily="@font/cabin"
            android:onClick="addOneForHome"
            android:text="@string/score_button_home_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toEndOf="@+id/button_score_visitor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_score_home"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_score_visitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button"
            android:fontFamily="@font/cabin"
            android:onClick="addOneForVisitor"
            android:text="@string/score_button_visitor_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView_score_visitor"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/cabin_medium"
            android:text="@string/game_header"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.529" />

        <TextView
            android:id="@+id/textView_score_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin_medium"
            android:text="@string/_0"
            android:textSize="100sp"
            app:layout_constraintEnd_toStartOf="@+id/button_reset_game"
            app:layout_constraintStart_toEndOf="@+id/button_reset_score"
            app:layout_constraintTop_toBottomOf="@+id/textView_game" />

        <Button
            android:id="@+id/button_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:fontFamily="@font/cabin"
            android:onClick="addOneForGame"
            android:text="@string/game_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_score_game"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_reset_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/button"
            android:fontFamily="@font/cabin"
            android:onClick="resetScore"
            android:text="@string/score_reset_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6" />

        <Button
            android:id="@+id/button_reset_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button"
            android:fontFamily="@font/cabin"
            android:onClick="resetGame"
            android:text="@string/game_reset_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="285dp"
            android:layout_height="34dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:onClick="onRadioButtonClicked"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_service"
            app:layout_constraintVertical_bias="0.25">

            <RadioButton
                android:id="@+id/radioButton_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:fontFamily="@font/cabin_medium"
                android:text="@string/home_radio_button_text"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="52dp"
                tools:layout_editor_absoluteY="442dp" />

            <RadioButton
                android:id="@+id/radioButton_visitor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/cabin_medium"
                android:text="@string/visitor_radio_button_text"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="229dp"
                tools:layout_editor_absoluteY="453dp" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin_medium"
            android:text="@string/service_header"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_game"
            app:layout_constraintVertical_bias="0.073" />

        <View
            android:id="@+id/view"
            android:layout_width="@dimen/cardview_compat_inset_shadow"
            android:layout_height="130dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/color_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.06999999" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>